# rust-gomoku

./: .gitignore  AGENTS.md  Cargo.toml  README-cn.md  README.md
android/: gradlew-proxy  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: app.css  app.js  index.html  ui_logic.js
android/app/src/main/kotlin/io/github/chubbykuu/rustgomoku/: GameViewModel.kt  MainActivity.kt  NativeBridge.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/main/res/values/: colors.xml
android/app/src/test/js/: ui_logic.test.cjs
android/gradle/wrapper/: gradle-wrapper.properties
android/rust_bridge/: Cargo.toml
android/rust_bridge/src/: lib.rs
cases/diff/: root_center_11.json  root_center_11_d6_w12.json  root_center_11_d6_w5.json  root_deep_opening_10_4_d8_w15.json  root_node_limit_5.json  root_node_limit_5_d6_w20_nodes_1000.json  root_node_limit_5_d6_w20_nodes_20.json  root_vcf_hit_6.json  root_vct_hit_8.json  root_white_first_3.json  root_win_priority_no_tactics_31.json  root_zhou_black_5_10_4_prefix_14_d6_w20.json  root_zhou_white_8_7_7_prefix_16_d6_w20.json
cases/match/: smoke.jsonl  smoke_quick.jsonl  standard.jsonl
cases/renju/: candidate_diagnostic_cases.jsonl  forbidden_hand_cases.jsonl  gui_normal_blunder_31.json  oracle_mismatches.jsonl  strength_100_prefixes.jsonl  strength_prefixes.jsonl  vct6_false_positive_case17_after_ply40.json  vct6_false_positive_case17_loss_line.json
data/reference_text/: config.py  shape_table.py
data/static/: default_eval_para.txt  shape_table.txt
docs/: android-app-design.md  perf-log.md  renju-forbidden-design.md
opponent/zhou/: .gitignore  Package.swift  README.md  best_params.json  pyproject.toml  setup.py  tune.py
opponent/zhou/Sources/GomokuVCFCLI/: main.swift
opponent/zhou/Sources/GomokuVCFCore/: VCFSolver.swift
opponent/zhou/benchmarks/: benchmark_hotspots.py
opponent/zhou/src/gomoku/: __init__.py  __main__.py  board.py  config.py  game.py
opponent/zhou/src/gomoku/ai/: __init__.py  _eval_kernels.pyx  evaluator.py  searcher.py  vcf.py
opponent/zhou/src/gomoku/ui/: __init__.py  renderer.py
opponent/zhou/tests/: test_board.py  test_evaluator.py  test_searcher.py  test_vcf.py
scripts/: analyze_root_profile.py  bench_match_cases.py  build_slowrenju_linux.py  compare_diff_outputs.py  diff_reference.py  extract_match_cases.py  extract_static_data.py  renju_dense_stress.py  renju_eval_suppression_check.py  renju_oracle_compare.py  renju_random_cases.py  run_diff.py  run_engine_match.py  run_gomocup_match.py
src/: app.rs  board.rs  config.rs  constants.rs  lib.rs  types.rs  zobrist.rs
src/eval/: caches.rs  global_eval.rs  local.rs  mod.rs
src/patterns/: buckets.rs  line.rs  mod.rs  shape_table.rs  shapes.rs
src/protocol/: gomocup.rs  mod.rs
src/rules/: forbidden.rs  mod.rs
src/search/: alphabeta.rs  mod.rs  movegen.rs  ordering.rs  root.rs  tt.rs
src/threats/: mod.rs  threat_board.rs  types.rs  vcf.rs  vct.rs
tests/: alphabeta_alignment.rs  board_zobrist_alignment.rs  config_patterns_alignment.rs  eval_caches_alignment.rs  eval_global_alignment.rs  eval_local_alignment.rs  movegen_alignment.rs  ordering_alignment.rs  protocol_alignment.rs  renju_perf.rs  renju_rule_integration.rs  renju_search_bench.rs  root_alignment.rs  tt_alignment.rs  vcf_alignment.rs  vct_alignment.rs  vct_stats_baseline.rs
tools/slowrenju_linux/: compat.hpp  main.cpp
