[package]
name = "rust_gomoku"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "rust_gomoku"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Search is hot and call-heavy; whole-program optimization closes part of the
# gap to the single-translation-unit C++ reference build. `panic` is left as the
# default `unwind` so `cargo test --release` keeps working.
lto = "fat"
codegen-units = 1

# Optimized build that still keeps debug symbols and function boundaries for
# profiling (WSL2 has no hardware PMU, so sample with software `task-clock`):
#   cargo build --profile profiling --tests
#   perf record -F 997 -e task-clock --call-graph dwarf -o p.data -- \
#     ./target/profiling/deps/renju_search_bench-<hash> --ignored --nocapture
#   perf report -i p.data --stdio    # or pipe `perf script` into a flamegraph
# LTO is off here so hot functions are not fully inlined away; absolute ns/node
# will differ from the release build, but hot-spot attribution is relative.
[profile.profiling]
inherits = "release"
debug = true
lto = false
codegen-units = 16
strip = false
