[package]
name = "rust_gomoku_android"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21.1", default-features = false }
rust_gomoku = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
