[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gomoku"
version = "0.1.0"
description = "五子棋 AI 对弈游戏 (Gomoku with Minimax AI)"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.1",
    "Cython>=3.0",
]

[project.scripts]
gomoku = "gomoku.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
